[package]
name = "m4x_logger"
version = "0.0.1"
edition = "2026"

description = "A simple logging utility for Rust applications"
license = "MIT"
repository = "https://github.com/yourusername/simple_logger"  # Update this
keywords = ["logging", "logger", "console", "file"]
categories = ["development-tools"]

[dependencies]
chrono = "0.4"
